--- a/financialapp/src/main/resources/application.properties.env
+++ b/financialapp/src/main/resources/application.properties.env
@@ -1,16 +1,19 @@
-# server.port=${PORT:8080}
-# server.forward-headers-strategy=native
-# server.servlet.session.cookie.secure=true
-# server.servlet.session.cookie.same-site=none
+spring.application.name=financialapp
+spring.datasource.url=jdbc:postgresql://localhost:5432/finappdb
+spring.datasource.username=maple
+spring.datasource.password=soccer
 
-# spring.datasource.url=${JDBC_DATABASE_URL}
-# spring.datasource.username=${JDBC_DATABASE_USERNAME}
-# spring.datasource.password=${JDBC_DATABASE_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
 
-# spring.datasource.driver-class-name=org.postgresql.Driver
 
-# spring.jpa.hibernate.ddl-auto=update
 
-# plaid.client-id=${PLAID_CLIENT_ID}
-# plaid.secret=${PLAID_SECRET}
-# plaid.env=${PLAID_ENV:production}
+#chat gave me this when it helped me setup the database all these lines below do is set the "dialect of the server jpa"
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+server.servlet.session.cookie.same-site=none
+server.servlet.session.cookie.secure=true
+server.forward-headers-strategy=framework
+
+#logging.level.org.springframework.security=DEBUG
